--- a/Tumor_Segmentation_Demo_Colab.ipynb
+++ b/Tumor_Segmentation_Demo_Colab.ipynb
@@ -25,7 +25,7 @@
       },
       "source": [
         "---\n",
-        "## 📚 Project Overview & Motivation\n",
+        "## Project Overview & Motivation\n",
         "\n",
         "### Clinical Context\n",
         "Brain tumor segmentation is a critical step in:\n",
@@ -47,9 +47,9 @@
         "\n",
         "By filtering in the frequency domain, we can:\n",
         "\n",
-        "✅ **Emphasize tumor boundaries** (high-pass filtering)  \n",
-        "✅ **Isolate tumor texture** (band-pass filtering)  \n",
-        "✅ **Suppress background noise** (complementary filtering)\n",
+        "- **Emphasize tumor boundaries** (high-pass filtering)  \n",
+        "- **Isolate tumor texture** (band-pass filtering)  \n",
+        "- **Suppress background noise** (complementary filtering)\n",
         "\n",
         "### Course Concepts Applied (BME 271D)\n",
         "This project demonstrates key concepts from Signals & Systems:\n",
@@ -61,7 +61,7 @@
         "\n",
         "---\n",
         "\n",
-        "## 🎯 Workflow Summary\n",
+        "## Workflow Summary\n",
         "\n",
         "```\n",
         "1. Upload MRI Image → Load and normalize to [0,1]\n",
@@ -86,7 +86,7 @@
         "id": "3bmNpSN7kf-n"
       },
       "source": [
-        "## 🔧 Setup: Installation & Imports\n",
+        "## Setup: Installation & Imports\n",
         "\n",
         "This cell installs all required packages and imports the necessary libraries.\n",
         "\n",
@@ -469,7 +469,7 @@
         "ground_truth_mask = None\n",
         "\n",
         "print('\\n✅ All functions loaded successfully!')\n",
-        "print('📋 Ready to process images!')"
+        "print('Ready to process images!')"
       ]
     },
     {
@@ -614,7 +614,7 @@
       },
       "source": [
         "---\n",
-        "## 🔬 Step 3: FFT Analysis\n",
+        "## Step 3: FFT Analysis\n",
         "\n",
         "Visualize the frequency domain representation of the MRI.\n",
         "\n",
@@ -671,7 +671,7 @@
       },
       "source": [
         "---\n",
-        "## 🎯 Step 4: Tumor Detection\n",
+        "## Step 4: Tumor Detection\n",
         "\n",
         "Run all segmentation methods and visualize results.\n",
         "\n",
@@ -751,7 +751,7 @@
       "source": [
         "# Run all detection methods\n",
         "if mri_image is not None:\n",
-        "    print('🎯 Running tumor detection...')\n",
+        "    print('Running tumor detection...')\n",
         "\n",
         "    sensitivity = 0.5\n",
         "\n",
@@ -833,7 +833,7 @@
       },
       "source": [
         "---\n",
-        "## 📊 Step 5: Quantitative Evaluation (Only if Ground Truth Provided)\n",
+        "## Step 5: Quantitative Evaluation (Only if Ground Truth Provided)\n",
         "\n",
         "Compare all methods using Dice, IoU, and Boundary Accuracy metrics.\n",
         "\n",
@@ -941,7 +941,7 @@
       "source": [
         "# Quantitative evaluation\n",
         "if mri_image is not None and ground_truth_mask is not None:\n",
-        "    print('📊 Calculating quantitative metrics...')\n",
+        "    print('Calculating quantitative metrics...')\n",
         "\n",
         "    # Evaluate all methods\n",
         "    metrics_df, method_masks = evaluate_all_methods(mri_image, ground_truth_mask, sensitivity=0.5)\n",
@@ -1031,7 +1031,7 @@
       },
       "source": [
         "---\n",
-        "## 🏥 Step 6: Final Clinical Report\n",
+        "## Step 6: Final Clinical Report\n",
         "\n",
         "Summary report with the Hybrid Combined method (recommended).\n",
         "\n",
@@ -1097,7 +1097,7 @@
       "source": [
         "# Final clinical report\n",
         "if mri_image is not None and 'results' in dir():\n",
-        "    print('🏥 Generating final clinical report...')\n",
+        "    print('Generating final clinical report...')\n",
         "\n",
         "    final_mask = results['Hybrid Combined']\n",
         "    confidence, tier = calculate_confidence(mri_image, final_mask)\n",
@@ -1184,7 +1184,7 @@
       },
       "source": [
         "---\n",
-        "## 🎓 Conclusion & Key Takeaways\n",
+        "## Conclusion & Key Takeaways\n",
         "\n",
         "### What We Demonstrated\n",
         "\n",
@@ -1251,7 +1251,7 @@
         "\n",
         "---\n",
         "\n",
-        "## 📚 References\n",
+        "## References\n",
         "\n",
         "1. Otsu, N. (1979). \"A threshold selection method from gray-level histograms.\" *IEEE Trans. Systems, Man, and Cybernetics*, 9(1), 62-66.\n",
         "\n",
